# themis

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  README_HF.md  THEMIS_landing.html  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  seed_qdrant.py  start.ps1  start.sh  test_qdrant.py
agents/: analyzer.py  classifier.py  contradiction.py  evidence_chain.py  reporter.py
api/: main.py  routes.py
core/: exceptions.py  llm.py  models.py  models.py.bak  progress.py  state.py  utils.py
data/: eu_ai_act_articles.json
evaluation/: metrics.py
graph/: builder.py  nodes.py  routing.py
ingest/: chunker.py  parser.py
observability/: tracer.py
rag/: embedder.py  hyde.py  reranker.py  store.py
tests/: conftest.py  test_agents.py  test_api.py  test_rag.py
themis-ui/: index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
themis-ui/src/: App.tsx  index.css  main.tsx
themis-ui/src/components/layout/: Navbar.tsx
themis-ui/src/components/pipeline/: NodeCard.tsx  PipelineTracker.tsx
themis-ui/src/components/report/: ComplianceScore.tsx  ContradictionCard.tsx  EvidenceChainCard.tsx  GapCard.tsx
themis-ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Skeleton.tsx
themis-ui/src/components/upload/: DropZone.tsx  FrameworkSelector.tsx
themis-ui/src/hooks/: useHITL.ts  useStream.ts
themis-ui/src/lib/: api.ts  utils.ts
themis-ui/src/pages/: AnalysisPage.tsx  ReportPage.tsx  UploadPage.tsx
themis-ui/src/types/: index.ts
themis_backup_20260312_014410/: .gitignore  Dockerfile  README.md  seed_qdrant.py
