[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name    = "themis"
version = "1.0.0"
description = "Autonomous EU AI Act Compliance Intelligence"
requires-python = ">=3.11"

dependencies = [
    # ── API ──────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # ── Pydantic V2 ─────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── LangGraph + LangChain ───────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # ── Instructor (structured outputs) ─────────────────────────────
    "instructor>=1.4.0",
    "openai>=1.40.0",

    # ── RAG ─────────────────────────────────────────────────────────
    "qdrant-client>=1.10.0",
    "sentence-transformers>=3.1.0",

    # ── Document parsing ────────────────────────────────────────────
    "pdfplumber>=0.11.0",

    # ── HTTP + async ────────────────────────────────────────────────
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",

    # ── Observability ───────────────────────────────────────────────
    "loguru>=0.7.2",
    "rich>=13.7.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.1.0",
    "datasets>=2.20.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff.lint]
select  = ["E", "F", "I", "UP"]
ignore  = ["E501"]

[tool.mypy]
strict         = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "graph", "api", "ingest", "rag", "evaluation", "observability"]

